@@ -1,5 +1,6 @@
 - Fixed: If none of the previous plugin maps could be found on startup, re-add the default
-- Added GUI element for entering matrix or vector data in plugins		TODO: cut / copy / paste, cursor placement
+- Added GUI element for entering matrix or vector data in plugins
+- Improve key handling while editing factor levels in a data.frame
 - Added utiltity function rk.flush.output()			TODO: Output Window->Flush Output should use this
 - RKWard is now categorized as Science/Math/Numerical Analysis in its .desktop file
 - Fixed: Device history was not working with more recent versions of ggplot2 		(TODO: find out, which version broke it, exactly)
